--- a/themes/notmyidea/templates/base.html
+++ b/themes/notmyidea/templates/base.html
@@ -54,10 +54,10 @@
                         <h2>{{ SOCIAL_WIDGET_NAME | default('social') }}</h2>
                         <ul>
                             {% if FEED_ALL_ATOM %}
-                            <li><a href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}" type="application/atom+xml" rel="alternate">Atom Feed</a></li>
                             {% endif %}
                             {% if FEED_ALL_RSS %}
-                            <li><a href="{{ FEED_DOMAIN }}/{{ FEED_ALL_RSS }}" type="application/rss+xml" rel="alternate">rss feed</a></li>
+                            <li><a href="{{ FEED_DOMAIN }}/{{ FEED_ALL_RSS }}" type="application/rss+xml" rel="alternate">RSS Feed</a></li>
                             {% endif %}
 
                         {% for name, link in SOCIAL %}
