--- a/themes/notmyidea/templates/base.html
+++ b/themes/notmyidea/templates/base.html
@@ -3,6 +3,7 @@
 <head>
         <meta charset="utf-8" />
         <title>{% block title %}{{ SITENAME }}{%endblock%}</title>
+        <meta name="description" content="{% block description %}{{ SITEDESCRIPTION }}{% endblock %}">
         <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/{{ CSS_FILE }}" />
         {% if FEED_ALL_ATOM %}
         <link href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} Atom Feed" />
