--- a/themes/notmyidea/templates/base.html
+++ b/themes/notmyidea/templates/base.html
@@ -5,6 +5,7 @@
         <title>{% block title %}{{ SITENAME }}{%endblock%}</title>
         <meta name="description" content="{% block description %}{{ SITEDESCRIPTION }}{% endblock %}">
         <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/{{ CSS_FILE }}" />
+        <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/custom.css" />
         {% if FEED_ALL_ATOM %}
         <link href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} Atom Feed" />
         {% endif %}
